--- a/registration.html
+++ b/registration.html
@@ -65,6 +65,7 @@
 <body>
     <div class="main">
         <h2>Registration Form</h2>
+        <h1>form</h1>
         <form action="">
             <label for="first">First Name:</label>
             <input type="text" id="first" name="first" required />
